--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -7,7 +7,7 @@ general {
 
 background {
     monitor = HDMI-A-1
-    path = /home/reshkk/Pictures/5(white).jpg
+    path = /home/reshkk/Pictures/wallpapers/5(white).jpg
     blur_passes = 1
     blur_size = 8
     noise = 0.0117
