--- a/config/hypr/configs/rules.conf
+++ b/config/hypr/configs/rules.conf
@@ -5,10 +5,12 @@
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
 
-windowrule = float, pavucontrol
-windowrule = float, eog 
-windowrule = float, Shotwell 
-windowrule = float, qalculate-gtk 
+windowrule = float, title:^(pavucontrol)$
+windowrule = float, title:^(eog)$ 
+windowrule = float, title:^(Shotwell)$ 
+windowrule = float, title:^(qalculate-gtk)$
+windowrule = float, title:^(file-roller)$ 
+
 
 
 # Example windowrule v2
