Add more configs

--- a/config/hypr/configs/rules.conf
+++ b/config/hypr/configs/rules.conf
@@ -5,8 +5,13 @@
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
 
-windowrule = float, class:^(Shotwell)$ 
+windowrule = float, title:Shotwell 
 windowrule = float, class:^(qalculate-gtk)$ 
+
+windowrule = float, class:steam
+windowrule = size 950 600, title:steam
+windowrule = size 250 500, title:^(Friends List)$
+windowrule = move 1655 44%, title:^(Friends List)$
 
 windowrule = float, class:file_progress
 windowrule = float, class:confirm
@@ -25,6 +30,7 @@ windowrule = float, class:file-roller
 windowrule = float, class:thunar
 windowrule = float, class:pavucontrol-qt
 windowrule = idleinhibit fullscreen, class:librewolf
+windowrule = idleinhibit fullscreen, class:firefox
 windowrule = float, title:^(Media viewer)$
 windowrule = float, title:^(Transmission)$
 windowrule = float, title:^(Volume Control)$
