--- a/config/hypr/configs/execs.conf
+++ b/config/hypr/configs/execs.conf
@@ -1,5 +1,7 @@
 # wallpaper stuff / More wallpaper options below
-exec-once = swww query || swww init
+exec-once = swww-daemon
+
+exec-once = nextcloud &
 
 #exec-once = hyprpaper & 
 exec-once = hypridle & 
