--- a/config/hypr/configs/env.conf
+++ b/config/hypr/configs/env.conf
@@ -4,6 +4,16 @@
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
+# XDG specific environment variables are often detected through portals and applications that may set those for you,
+# however it is not a bad idea to set them explicitly.
+env = XDG_SESSION_DESKTOP,Hyprland
+
+# GTK: Use wayland if available, fall back to x11 if not.
+env = GDK_BACKEND,wayland,x11
+
+# the line below may help with multiple monitors
+#env = WLR_EGL_NO_MODIFIERS,0
+
 env = XDG_PICTURES_DIR, /home/reshkk/Pictures
 env = HYPRSHOT_DIR, /home/reshkk/Pictures/screenshot
 
