--- a/config/hypr/configs/execs.conf
+++ b/config/hypr/configs/execs.conf
@@ -12,3 +12,4 @@ exec-once = swaync &
 exec-once = wl-paste --type text --watch cliphist store 
 exec-once = wl-paste --type image --watch cliphist store
 
+exec-once = ~/.config/hypr/scripts/autostart.sh
