--- a/config/hypr/configs/rules.conf
+++ b/config/hypr/configs/rules.conf
@@ -2,48 +2,59 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
-windowrule = float, title:Shotwell 
-windowrule = float, class:^(qalculate-gtk)$ 
-
+#########
+# Steam #
+#########
 windowrule = float, class:steam
 windowrule = size 950 600, title:steam
 windowrule = size 250 500, title:^(Friends List)$
 windowrule = move 1655 44%, title:^(Friends List)$
 
+###################
+#  File Explorer  #
+###################
 windowrule = float, class:file_progress
 windowrule = float, class:confirm
 windowrule = float, class:dialog
 windowrule = float, class:download
+windowrule = float, class:file-roller
+windowrule = float, title:Open File
+windowrule = opacity 0.80 0.80, class:Thunar
+
+#########
+#Volume #
+#########
+windowrule = size 800 600, title:^(Volume Control)$
+windowrule = move 75 44%, title:^(Volume Control)$
+windowrule = float, title:^(Volume Control)$
+windowrule = float, class:pavucontrol-qt
+windowrule = float, class:pavucontrol-qt
+windowrulev2 = opacity 0.80 0.70,title:^(Volume Control)$
+
+###########
+# Browser #
+###########
+windowrule = float, title:^(Picture-in-Picture)$
+windowrule = float, title:^(librewolf — Sharing Indicator)$
+windowrule = move 0 0, title:^(librewolf — Sharing Indicator)$
+windowrule = idleinhibit fullscreen, class:librewolf
+windowrule = idleinhibit fullscreen, class:firefox
+
+#########
+# Other #
+######### 
+windowrule = float, title:Shotwell 
+windowrule = float, class:qalculate-gtk 
 windowrule = float, class:notification
 windowrule = float, class:error
 windowrule = float, class:splash
 windowrule = float, class:confirmreset
-windowrule = float, title:Open File
 windowrule = float, title:branchdialog
 windowrule = float, class:Lxappearance
 windowrule = float, class:ncmpcpp
-windowrule = float, class:pavucontrol-qt
-windowrule = float, class:file-roller
-windowrule = float, class:thunar
-windowrule = float, class:pavucontrol-qt
-windowrule = idleinhibit fullscreen, class:librewolf
-windowrule = idleinhibit fullscreen, class:firefox
 windowrule = float, title:^(Media viewer)$
 windowrule = float, title:^(Transmission)$
-windowrule = float, title:^(Volume Control)$
-windowrule = float, title:^(Picture-in-Picture)$
-windowrule = float, title:^(librewolf — Sharing Indicator)$
-windowrule = move 0 0, title:^(librewolf — Sharing Indicator)$
-windowrule = size 800 600, title:^(Volume Control)$
-windowrule = move 75 44%, title:^(Volume Control)$
 
-
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = opacity 0.9 0.8, class:^(kitty)$
 
