--- a/config/hypr/configs/general.conf
+++ b/config/hypr/configs/general.conf
@@ -3,7 +3,7 @@ monitor=,preferred,auto,1
 
 #Details about monitors: `hyprctl monitors`
 #monitor=HDMI-A-1, 1920x1080@75, 0x0, 1
-
+# wdisplays + wlr-randr for multi-monitors
 
 #############
 ### INPUT ###
