Change some conf

--- a/config/hypr/configs/keyb-hypr.conf
+++ b/config/hypr/configs/keyb-hypr.conf
@@ -7,6 +7,9 @@ $scripts = $HOME/.config/hypr/scripts
 bind = $mainMod alt, F, fullscreen,
 bind = $mainMod, F, fullscreen, 1
 
+# Pin window
+bind = $mainMod, P, pin
+
 #####################
 #Binds for hyprland #
 #####################
@@ -19,7 +22,7 @@ bind = $mainMod SHIFT, V, exec, hyprctl dispatch workspaceopt allfloat # All win
 bind = $mainMod, J, togglesplit, # dwindle
 
 #Hyprpicker
-bind = $mainMod, P, exec, hyprpicker | wl-copy
+bind = $mainMod SHIFT, P, exec, hyprpicker | wl-copy
 
 
 # Screenshot a region
