--- a/config/hypr/configs/rules.conf
+++ b/config/hypr/configs/rules.conf
@@ -5,56 +5,89 @@
 #########
 # Steam #
 #########
-windowrule = float, class:steam
-windowrule = size 950 600, title:steam
-windowrule = size 250 500, title:^(Friends List)$
-windowrule = move 1655 44%, title:^(Friends List)$
+windowrulev2 = float, class:steam
+windowrulev2 = size 950 600, title:steam
+windowrulev2 = size 250 500, title:^(Friends List)$
+#windowrulev2 = move 1655 44%, title:^(Friends List)$
+windowrulev2 = move 86% 52%, title:^(Friends List)$
+windowrulev2 = immediate, title:.*\.exe # Tearing
+windowrulev2 = immediate, class:^(steam_app) # Tearing
+
 
 ###################
 #  File Explorer  #
 ###################
-windowrule = float, class:file_progress
-windowrule = float, class:confirm
-windowrule = float, class:dialog
-windowrule = float, class:download
-windowrule = float, class:file-roller
-windowrule = float, title:Open File
-windowrule = opacity 0.95 0.95, class:Thunar
+windowrulev2 = float, class:file_progress
+windowrulev2 = float, class:confirm
+windowrulev2 = float, class:dialog
+windowrulev2 = float, class:download
+windowrulev2 = float, class:file-roller
+windowrulev2 = float, title:Open File
+windowrulev2 = opacity 0.95 0.95, class:Thunar
 
 #########
 #Volume #
 #########
-windowrule = size 800 600, title:^(Volume Control)$
-windowrule = move 75 44%, title:^(Volume Control)$
-windowrule = float, title:^(Volume Control)$
-windowrule = float, class:pavucontrol-qt
-windowrule = float, class:pavucontrol-qt
-windowrulev2 = opacity 0.80 0.70,title:^(Volume Control)$
+windowrulev2 = size 800 600, title:^(Volume Control)$
+windowrulev2 = move 75 44%, title:^(Volume Control)$
+windowrulev2 = float, title:^(Volume Control)$
+windowrulev2 = float, class:pavucontrol-qt
+windowrulev2 = opacity 0.9 0.75,title:^(Volume Control)$
+
+###########
+# Nm-conn #
+###########
+windowrulev2 = float, class:^(nm-connection-editor)$
+windowrulev2 = size 45%, class:^(nm-connection-editor)$
+windowrulev2 = center, class:^(nm-connection-editor)$
+windowrulev2 = opacity 0.9 0.70,class:^(nm-connection-editor)$
 
 ###########
 # Browser #
 ###########
-windowrule = float, title:^(Picture-in-Picture)$
-windowrule = float, title:^(librewolf — Sharing Indicator)$
-windowrule = move 0 0, title:^(librewolf — Sharing Indicator)$
-windowrule = idleinhibit fullscreen, class:librewolf
-windowrule = idleinhibit fullscreen, class:firefox
+windowrulev2 = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
+windowrulev2 = keepaspectratio, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
+windowrulev2 = move 73% 72%, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$ 
+windowrulev2 = size 25%, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
+windowrulev2 = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
+windowrulev2 = pin, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
+windowrulev2 = move 0 0, title:^(librewolf — Sharing Indicator)$
+windowrulev2 = idleinhibit fullscreen, class:librewolf
+windowrulev2 = idleinhibit fullscreen, class:firefox
 
 #########
 # Other #
 ######### 
-windowrule = float, title:Shotwell 
-windowrule = float, class:qalculate-gtk 
-windowrule = float, class:notification
-windowrule = float, class:error
-windowrule = float, class:splash
-windowrule = float, class:confirmreset
-windowrule = float, title:branchdialog
-windowrule = float, class:Lxappearance
-windowrule = float, class:ncmpcpp
-windowrule = float, title:^(Media viewer)$
-windowrule = float, title:^(Transmission)$
+windowrulev2 = float, class:shotwell 
+windowrulev2 = float, class:qalculate-gtk 
+windowrulev2 = float, class:notification
+windowrulev2 = float, class:error
+windowrulev2 = float, class:splash
+windowrulev2 = float, class:confirmreset
+windowrulev2 = float, title:branchdialog
+windowrulev2 = float, class:Lxappearance
+windowrulev2 = float, class:ncmpcpp
+windowrulev2 = float, title:^(Untitled Document 1 - gedit)$
+windowrulev2 = float, title:^(Media viewer)$
+windowrulev2 = float, title:^(Transmission)$
 
+##################
+# Dialog windows #
+##################
+windowrulev2 = center, title:^(Open File)(.*)$
+windowrulev2 = center, title:^(Select a File)(.*)$
+windowrulev2 = center, title:^(Choose wallpaper)(.*)$
+windowrulev2 = center, title:^(Open Folder)(.*)$
+windowrulev2 = center, title:^(Save As)(.*)$
+windowrulev2 = center, title:^(Library)(.*)$
+windowrulev2 = center, title:^(File Upload)(.*)$
+windowrulev2 = float, title:^(Open File)(.*)$
+windowrulev2 = float, title:^(Select a File)(.*)$
+windowrulev2 = float, title:^(Choose wallpaper)(.*)$
+windowrulev2 = float, title:^(Open Folder)(.*)$
+windowrulev2 = float, title:^(Save As)(.*)$
+windowrulev2 = float, title:^(Library)(.*)$
+windowrulev2 = float, title:^(File Upload)(.*)$
 
 windowrulev2 = opacity 0.9 0.8, class:^(kitty)$
 
