Change some conf

--- a/config/hypr/configs/rules.conf
+++ b/config/hypr/configs/rules.conf
@@ -67,7 +67,8 @@ windowrulev2 = float, class:confirmreset
 windowrulev2 = float, title:branchdialog
 windowrulev2 = float, class:Lxappearance
 windowrulev2 = float, class:ncmpcpp
-windowrulev2 = float, title:^(Untitled Document 1 - gedit)$
+windowrulev2 = float, title:^(.*)(gedit)$
+windowrulev2 = float, title:^(.*)(Shotwell)$
 windowrulev2 = float, title:^(Media viewer)$
 windowrulev2 = float, title:^(Transmission)$
 
@@ -88,6 +89,7 @@ windowrulev2 = float, title:^(Open Folder)(.*)$
 windowrulev2 = float, title:^(Save As)(.*)$
 windowrulev2 = float, title:^(Library)(.*)$
 windowrulev2 = float, title:^(File Upload)(.*)$
+windowrulev2 = float, title:^(Rename)(.*)$
 
 windowrulev2 = opacity 0.9 0.8, class:^(kitty)$
 
