Change some conf

--- a/config/hypr/configs/rules.conf
+++ b/config/hypr/configs/rules.conf
@@ -42,6 +42,18 @@ windowrulev2 = size 45%, class:^(nm-connection-editor)$
 windowrulev2 = center, class:^(nm-connection-editor)$
 windowrulev2 = opacity 0.9 0.70,class:^(nm-connection-editor)$
 
+#############
+# Nextcloud #
+#############
+windowrulev2 = float, title:^(Nextcloud)$
+windowrulev2 = move 78% 5%, title:^(Nextcloud)$
+windowrulev2 = size 20% 50%, title:^(Nextcloud)$
+windowrulev2 = stayfocused, title:^(Nextcloud)$
+windowrulev2 = float, title:^(Nextcloud Settings)$
+windowrulev2 = move 42% 12%, title:^(Nextcloud Settings)$
+windowrulev2 = size 35%, title:^(Nextcloud Settings)$
+
+
 ###########
 # Browser #
 ###########
