Change hypr config

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -6,3 +6,4 @@ source=~/.config/hypr/configs/animations.conf
 source=~/.config/hypr/configs/rules.conf
 source=~/.config/hypr/configs/keyb-hypr.conf
 source=~/.config/hypr/configs/keyb-app.conf
+source=~/.config/hypr/configs/plugins.conf
