--- a/config/hypr/configs/env.conf
+++ b/config/hypr/configs/env.conf
@@ -19,3 +19,6 @@ env = HYPRSHOT_DIR, /home/reshkk/Pictures/screenshot
 
 env = EDITOR, /usr/bin/vim
 env = VISUAL, /usr/bin/vim
+
+# Disable telemetry for .NET/dotnet
+#env = DOTNET_CLI_TELEMETRY_OPTOUT=1
