--- a/config/hypr/configs/env.conf
+++ b/config/hypr/configs/env.conf
@@ -21,4 +21,4 @@ env = EDITOR, /usr/bin/vim
 env = VISUAL, /usr/bin/vim
 
 # Disable telemetry for .NET/dotnet
-#env = DOTNET_CLI_TELEMETRY_OPTOUT=1
+#env = DOTNET_CLI_TELEMETRY_OPTOUT,1
