--- a/config/hypr/configs/keyb-hypr.conf
+++ b/config/hypr/configs/keyb-hypr.conf
@@ -24,6 +24,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 #Hyprpicker
 bind = $mainMod SHIFT, P, exec, hyprpicker | wl-copy
 
+bind = $mainMod, A, exec, pavucontrol
 
 # Screenshot a region
 bind = , PRINT, exec, hyprshot -m region
