--- a/config/hypr/configs/rules.conf
+++ b/config/hypr/configs/rules.conf
@@ -34,6 +34,16 @@ windowrulev2 = float, title:^(Volume Control)$
 windowrulev2 = float, class:pavucontrol-qt
 windowrulev2 = opacity 0.9 0.75,title:^(Volume Control)$
 
+################
+#MissionCenter #
+################
+windowrulev2 = size 800 600, title:^(Mission Center)$
+windowrulev2 = move 75 44%, title:^(Mission Center)$
+windowrulev2 = float, title:^(Mission Center)$
+windowrulev2 = float, class:pavucontrol-qt
+windowrulev2 = opacity 0.9 0.75,title:^(Mission Center)$
+
+
 ###########
 # Nm-conn #
 ###########
