--- a/config/hypr/configs/keyb-hypr.conf
+++ b/config/hypr/configs/keyb-hypr.conf
@@ -28,6 +28,7 @@ bind = $mainMod, A, exec, pavucontrol
 
 # Screenshot a region
 bind = , PRINT, exec, hyprshot -m region
+bind = $mainMod, PRINT, exec, hyprshot -m window
 
 
 ##########
