--- a/config/swaync/config.json
+++ b/config/swaync/config.json
@@ -22,6 +22,7 @@
     "notification-body-image-width": 150,
     "notification-window-width": 300, 
 
+   
     "timeout": 6,
     "timeout-low": 3,
     "timeout-critical": 0,
@@ -54,8 +55,11 @@
             "text": "Notification"
         },
         "mpris": {
-            "image-size": 50,
-            "image-radius": 0
+           "image-size": 96,
+           "show-album-art": "always",
+           "autohide": false,
+           "blacklist": ["playerctld"],
+           "loop-carousel": true 
         },
         "volume": {
             "label": "󰕾"
