--- a/config/hypr/configs/env.conf
+++ b/config/hypr/configs/env.conf
@@ -22,3 +22,6 @@ env = VISUAL, /usr/bin/vim
 
 # Disable telemetry for .NET/dotnet
 env = DOTNET_CLI_TELEMETRY_OPTOUT,1
+
+
+env = SDL_VIDEODRIVER,wayland
