Change hypr configs

--- a/config/hypr/configs/env.conf
+++ b/config/hypr/configs/env.conf
@@ -24,4 +24,4 @@ env = VISUAL, /usr/bin/vim
 env = DOTNET_CLI_TELEMETRY_OPTOUT,1
 
 
-env = SDL_VIDEODRIVER,wayland
+# env = SDL_VIDEODRIVER,wayland
