--- a/config/hypr/configs/general.conf
+++ b/config/hypr/configs/general.conf
@@ -1,8 +1,8 @@
 #MONITOR CONFIG
-#monitor=,preferred,auto,1
+monitor=,preferred,auto,1
 
 #Details about monitors: `hyprctl monitors`
-monitor=HDMI-A-1,1920x1080@75, 0x0, 1
+# monitor=HDMI-A-1,1920x1080@75, 0x0, 1
 # wdisplays + wlr-randr for multi-monitors
 
 
@@ -26,11 +26,6 @@ input {
 
 gestures {
 workspace_swipe = false
-}
-
-misc {
-  vrr = 1        # включить аппаратный Variable Refresh Rate
-  vfr = false    # отрисовывать каждый кадр; важнее стабильность FPS
 }
 
 
