--- a/config/hypr/configs/plugins.conf
+++ b/config/hypr/configs/plugins.conf
@@ -1,3 +1,6 @@
+#hyprpm add https://github.com/hyprwm/hyprland-plugins
+#hyprpm enable csgo-vulkan-fix
+
 plugin {
     csgo-vulkan-fix {
         res_w = 1024
