--- a/config/hypr/configs/keybinds.conf
+++ b/config/hypr/configs/keybinds.conf
@@ -1,6 +1,21 @@
 $mainMod = SUPER # Sets "Windows" key as main modifier
 $scripts = $HOME/.config/hypr/scripts
 
+# Notification #
+################
+bind = $mainMod, N, exec, swaync-client -t -sw # swayNC panel
+
+################
+# Rofi scripts #
+################
+bind = $mainMod, R, exec, pkill rofi || rofi -show drun -theme ~/.config/rofi/main.rasi # Main-rofi
+bind = $mainMod, ESCAPE, exec, $scripts/powermenu.sh
+bind = $mainMod ALT, V, exec, $scripts/clipManager.sh # Clipboard Manager
+bind = $mainMod, H, exec, $scripts/rofi_keybinds.sh # All hotkeys
+bind = $mainMod ALT, W, exec, $scripts/wallpaperSelect.sh # Change wallpaper
+bind = ALT, tab, exec, $scripts/windows_switch.sh # Like alt+tab windows
+
+bind = $mainMod ALT, R, exec, $scripts/refresh.sh # Refresh waybar\swaync\hypridle
 
 #Binds for apps
 bind = $mainMod, Q, exec, kitty
@@ -8,34 +23,46 @@ bind = $mainMod, W, exec, gedit
 bind = $mainMod, E, exec, Thunar
 bind = $mainMod, O, exec, obsidian
 
-#Binds for hyprland 
+
+##############
+# Fullscreen #
+##############
+bind = $mainMod alt, F, fullscreen,
+bind = $mainMod, F, fullscreen, 1
+
+# Pin window
+bind = $mainMod, P, pin
+
+#####################
+#Binds for hyprland #
+#####################
 bind = $mainMod, C, killactive,
-bind = $mainMod, F, fullscreen,
 bind = $mainMod, L, exec, hyprlock 
 bind = $mainMod ALT, M, exit,
-
 bind = $mainMod, V, togglefloating,
 bind = $mainMod SHIFT, V, exec, hyprctl dispatch workspaceopt allfloat # All windows float
 #bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
-bind = $mainMod, R, exec, pkill rofi || rofi -show drun -theme ~/.config/rofi/main.rasi # Rofi
+#Hyprpicker
+bind = $mainMod SHIFT, P, exec, hyprpicker | wl-copy
 
-bind = $mainMod, ESCAPE, exec, $scripts/powermenu.sh
+bind = $mainMod, A, exec, pavucontrol
 
-#Binds for swaync
-bind = $mainMod, N, exec, swaync-client -t -sw # swayNC panel
-bind = $mainMod ALT, R, exec, $scripts/refresh.sh # Refresh waybar\swaync\wlogout\hypridle
-bind = $mainMod ALT, V, exec, $scripts/clipManager.sh # Clipboard Manager
+# Screenshot a region
+bind = , PRINT, exec, hyprshot -m region
+bind = $mainMod, PRINT, exec, hyprshot -m window
 
-bind = $mainMod, H, exec, $scripts/rofi_keybinds.sh # All hotkeys
-bind = $mainMod ALT, W, exec, $scripts/wallpaperSelect.sh # Change wallpaper 
 
-# Groups
+##########
+# Groups #
+##########
 bind = $mainMod, G, togglegroup
-bind = ALT, tab, changegroupactive  #change focus to another window  
+#bind = ALT, tab, changegroupactive  #change focus to another window  
 
-#Volume binds
+###############
+#Volume binds #
+###############
 bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindl = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
@@ -44,22 +71,17 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 bindl = , XF86AudioNext, exec, playerctl next
 
-# Screenshot a region
-bind = , PRINT, exec, hyprshot -m region
-
-#Hyprpicker
-bind = $mainMod, P, exec, hyprpicker | wl-copy
-
-#Wlogout
-#bind = $mainMod, ESCAPE, exec, wlogout
-
-# Move focus with mainMod + arrow keys
+########################################
+# Move focus with mainMod + arrow keys #
+########################################
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
-# Switch workspaces with mainMod + [0-9]
+##########################################
+# Switch workspaces with mainMod + [0-9] #
+##########################################
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -71,7 +93,9 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
+##################################################################
+# Move active window to a workspace with mainMod + SHIFT + [0-9] #
+##################################################################
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -83,7 +107,9 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Move active window to a workspace silently mainMod + CTRL [0-9]
+###################################################################
+# Move active window to a workspace silently mainMod + CTRL [0-9] #
+###################################################################
 bind = $mainMod CTRL, 1, movetoworkspacesilent, 1
 bind = $mainMod CTRL, 2, movetoworkspacesilent, 2
 bind = $mainMod CTRL, 3, movetoworkspacesilent, 3
@@ -95,19 +121,25 @@ bind = $mainMod CTRL, 8, movetoworkspacesilent, 8
 bind = $mainMod CTRL, 9, movetoworkspacesilent, 9
 bind = $mainMod CTRL, 0, movetoworkspacesilent, 10
 
-# Example special workspace (scratchpad)
+##########################################
+# Example special workspace (scratchpad) #
+##########################################
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
-# Scroll through existing workspaces with mainMod + scroll
+############################################################
+# Scroll through existing workspaces with mainMod + scroll #
+############################################################
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
+##################
+# Resize windows #
+##################
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# Resize windows
 binde = $mainMod+Shift, Right, resizeactive, 30 0
 binde = $mainMod+Shift, Left, resizeactive, -30 0
 binde = $mainMod+Shift, Up, resizeactive, 0 -30
