--- a/config/hypr/configs/general.conf
+++ b/config/hypr/configs/general.conf
@@ -1,3 +1,8 @@
+source=~/.config/hypr/configs/colors.conf
+
+$active_border = $color1 $color2 $color4  
+$inactive_border = rgb(0a0d0d)
+
 #MONITOR CONFIG
 monitor=,preferred,auto,1
 
@@ -38,8 +43,6 @@ general {
     gaps_out = 6
     border_size = 2
 
-    $active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    $inactive_border = rgba(595959aa)
     col.active_border = $active_border 
     col.inactive_border = $inactive_border 
    
