--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -1,5 +1,7 @@
-$border_active = rgb(909090)
-$border_inactive = rgb(1b1b1b)
+source=~/.config/hypr/configs/colors.conf
+
+$border_active = $color1
+$border_inactive = $background
 
 general {
   hide_cursor = 0
@@ -7,7 +9,7 @@ general {
 
 background {
     monitor = HDMI-A-1
-    path = /home/reshkk/Pictures/wallpapers/5(white).jpg
+    path = $HOME/.current_wallpaper
     blur_passes = 1
     blur_size = 8
     noise = 0.0117
