--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,4 +1,4 @@
-include ./mocha.conf
+include ./colors.conf
 font_family 	jetbrains mono nerd font
 font_size	11
 bold_font	auto
@@ -6,9 +6,40 @@ italic_font	auto
 bold_italic_font auto
 mouse_hide_wait 2.0
 cursor_shape    block
-url_color	#0087bd
+url_color  #F5E0DC
 url_style	dotted
 confirm_os_window_close 0
 background_opacity 0.7
 
 notify_on_cmd_finish invisible
+
+selection_foreground    #1E1E2E
+selection_background    #F5E0DC
+
+cursor_text_color       #1E1E2E
+
+# Kitty window border colors
+active_border_color     #B4BEFE
+inactive_border_color   #6C7086
+bell_border_color       #F9E2AF
+
+# OS Window titlebar colors
+wayland_titlebar_color system
+macos_titlebar_color system
+
+# Tab bar colors
+active_tab_foreground   #11111B
+active_tab_background   #CBA6F7
+inactive_tab_foreground #CDD6F4
+inactive_tab_background #181825
+tab_bar_background      #11111B
+
+# Colors for marks (marked text in the terminal)
+mark1_foreground #1E1E2E
+mark1_background #B4BEFE
+mark2_foreground #1E1E2E
+mark2_background #CBA6F7
+mark3_foreground #1E1E2E
+mark3_background #74C7EC
+
+
