Delete old files

--- a/config/hypr/configs/colors.conf
+++ b/config/hypr/configs/colors.conf
@@ -1,18 +1,18 @@
-$background = rgb(0c090a)
-$color0     = rgb(0c090a)
-$color1     = rgb(6F4047)
-$color2     = rgb(8A353A)
-$color3     = rgb(923A47)
-$color4     = rgb(9C4F53)
-$color5     = rgb(A04341)
-$color6     = rgb(E16168)
-$color7     = rgb(e9b2bb)
-$color8     = rgb(a37c82)
-$color9     = rgb(6F4047)
-$color10    = rgb(8A353A)
-$color11    = rgb(923A47)
-$color12    = rgb(9C4F53)
-$color13    = rgb(A04341)
-$color14    = rgb(E16168)
-$color15    = rgb(e9b2bb)
+$background = rgb(090805)
+$color0     = rgb(090805)
+$color1     = rgb(666153)
+$color2     = rgb(956943)
+$color3     = rgb(7C8274)
+$color4     = rgb(A38D69)
+$color5     = rgb(D5AA69)
+$color6     = rgb(B0AA96)
+$color7     = rgb(f1e5c9)
+$color8     = rgb(a8a08c)
+$color9     = rgb(666153)
+$color10    = rgb(956943)
+$color11    = rgb(7C8274)
+$color12    = rgb(A38D69)
+$color13    = rgb(D5AA69)
+$color14    = rgb(B0AA96)
+$color15    = rgb(f1e5c9)
 
