--- a/config/kitty/colors.conf
+++ b/config/kitty/colors.conf
@@ -1,20 +1,20 @@
-foreground   #e9b2bb
-background   #0c090a
-cursor       #e9b2bb
+foreground   #f1e5c9
+background   #090805
+cursor       #f1e5c9
 
-color0       #0c090a
-color8       #a37c82
-color1       #6F4047
-color9       #6F4047
-color2       #8A353A
-color10      #8A353A
-color3       #923A47
-color11      #923A47
-color4       #9C4F53
-color12      #9C4F53
-color5       #A04341
-color13      #A04341
-color6       #E16168
-color14      #E16168
-color7       #e9b2bb
-color15      #e9b2bb
+color0       #090805
+color8       #a8a08c
+color1       #666153
+color9       #666153
+color2       #956943
+color10      #956943
+color3       #7C8274
+color11      #7C8274
+color4       #A38D69
+color12      #A38D69
+color5       #D5AA69
+color13      #D5AA69
+color6       #B0AA96
+color14      #B0AA96
+color7       #f1e5c9
+color15      #f1e5c9
